# abuse-reporter

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml  reports.db
src/abuse_reporter/: __init__.py  __main__.py  constants.py  db.py  discord.py  handlers.py  mailing.py  networking.py  runner.py
tests/: test___init__.py  test_abuse_report.py
