[project]
name = "abuse-reporter"
version = "0.1.0"
description = "Abuse reporting agent for websites hosted on Dreamhost."
authors = [
    {name = "xransum",email = "xransum@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
